apps/test-smoke/environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testsmoke-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - testsmoke-web.do.metacpan.org
      secretName: web-tls
  rules:
    - host: testsmoke-web.do.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: testsmoke-web
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: testsmoke-api
                port:
                  number: 80
